--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "$name$",
-  "version": "$version$",
+  "name": "blog",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
-    $END$
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "hbs": "^4.1.1",
+    "mongoose": "^5.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
