--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "blog",
   "version": "1.0.0",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node ."
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -11,6 +15,9 @@
     "mongoose": "^5.12.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.7.13",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.2"
   }
 }
