--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node ."
+    "start": "node .",
+    "test": "mocha src/tests/*.test.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,6 +19,8 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.13",
+    "mocha": "^9.1.1",
+    "supertest": "^6.1.6",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
   }
