--- a/package.json
+++ b/package.json
@@ -1,29 +1,14 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "main": "dist/app.js",
+  "main": "app.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
-    "test": "mocha src/tests/*.test.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cyclic-dynamodb": "0.0.27",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "hbs": "^4.1.1",
-    "mongoose": "^5.12.0"
+    "express": "^4.17.1"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^16.7.13",
-    "mocha": "^9.1.1",
-    "supertest": "^6.1.6",
-    "tslint": "^6.1.3",
-    "typescript": "^4.4.2"
-  }
+  "devDependencies": {}
 }
