--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
